--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -9,7 +9,7 @@
 .animation-movies-container,
 .horror-movies-container,
 .mystery-movies-container {
-  cursor: grab;
+  // cursor: grab;
   overflow-x: hidden;
   padding: 2rem 5%;
 
