--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -74,7 +74,7 @@
   text-align: center;
   position: relative;
   z-index: 6;
-  background: linear-gradient(to right, rgb(205, 96, 125), rgb(201, 64, 67));
+  background: rgb(37, 37, 37);
   border-bottom-left-radius: 2rem;
   border-bottom-right-radius: 2rem;
   font-family: abril;
