--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -3,10 +3,10 @@ nav {
   min-height: 10vh;
   display: flex;
   align-items: center;
-  background: rgb(43, 42, 42);
-  background: linear-gradient(to right, rgb(32, 89, 80), rgb(42, 179, 191));
-  // background: linear-gradient(to right, rgb(32, 89, 80), transparent);
+  background: rgba(245, 245, 245, 0.8);
+  box-shadow: 0px 0px 30px rgba(32, 89, 80, 0.3);
+  // z-index: 10;
   a {
-    color: whitesmoke;
+    color: black;
   }
 }
