--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -25,6 +25,8 @@
 .movie-card {
   position: relative;
   transition: all 0.4s ease;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+  border-radius: 2rem;
   &:hover .movie-info {
     cursor: pointer;
     backdrop-filter: blur(0.5rem);
@@ -33,12 +35,11 @@
 }
 .movie-poster {
   overflow: hidden;
-  min-height: 30rem;
-  min-width: 20rem;
+  height: 100%;
+  min-width: 30rem;
   cursor: pointer;
-  // border-radius: 2rem;
-  border-top-left-radius: 2rem;
-  border-top-right-radius: 2rem;
+  border-radius: 2rem;
+
   img {
     transition: all 0.5s ease;
     pointer-events: none;
@@ -68,15 +69,4 @@
     padding: 2rem 0;
     font-weight: 400;
   }
-}
-.rating {
-  text-align: center;
-  position: relative;
-  z-index: 6;
-  background: rgb(37, 37, 37);
-  border-bottom-left-radius: 2rem;
-  border-bottom-right-radius: 2rem;
-  font-family: abril;
-  font-weight: bold;
-  color: whitesmoke;
 }
