--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,3 +1,36 @@
+.search-wrapper {
+  min-height: 80vh;
+  padding: 4rem 5%;
+  position: relative;
+  background: rgba(0, 0, 0, 0.9);
+  background: linear-gradient(to right, rgb(0, 0, 0), transparent);
+  color: whitesmoke;
+  display: flex;
+  align-items: center;
+}
+.search-container {
+  align-items: center;
+  width: 70%;
+  h1 {
+    font-size: $header2;
+    margin-bottom: 4rem;
+  }
+}
+.search-bg-img {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-position: center;
+  }
+}
+
 .movies-wrapper {
   padding: 1rem 0;
   background: rgba(245, 245, 245, 0.8);
