--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -3,10 +3,9 @@ nav {
   min-height: 10vh;
   display: flex;
   align-items: center;
-  background: rgba(245, 245, 245, 0.8);
+  background: rgba(0, 0, 0, 0.8);
   box-shadow: 0px 0px 30px rgba(32, 89, 80, 0.3);
-  // z-index: 10;
   a {
-    color: black;
+    color: whitesmoke;
   }
 }
