--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,12 +1,11 @@
 .search-wrapper {
-  min-height: 80vh;
+  min-height: 70vh;
   padding: 4rem 5%;
   position: relative;
   background: rgba(0, 0, 0, 0.6);
   color: whitesmoke;
   display: flex;
   align-items: center;
-  // justify-content: center;
 }
 .search-container {
   display: flex;
@@ -18,6 +17,8 @@
   }
   form {
     display: flex;
+    border-radius: 1rem;
+    overflow: hidden;
     input {
       padding: 1rem 3rem;
       width: 100%;
@@ -26,9 +27,10 @@
       background: whitesmoke;
     }
     button {
+      cursor: pointer;
       padding: 1rem 3rem;
       border: none;
-      background: whitesmoke;
+      background: linear-gradient(to right, #65dfc9, #6cdbeb);
     }
   }
 }
@@ -48,9 +50,9 @@
 }
 
 .movies-wrapper {
-  padding: 1rem 0;
-  background: rgba(245, 245, 245, 0.8);
-  backdrop-filter: blur(1.5rem);
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
 }
 .trending-movies-container,
 .animation-movies-container,
@@ -58,6 +60,14 @@
 .mystery-movies-container {
   overflow-x: hidden;
   padding: 2rem 5%;
+  border-radius: 2rem;
+  background: linear-gradient(
+    to right bottom,
+    rgba(255, 255, 255, 0.7),
+    rgba(255, 255, 255, 0.3)
+  );
+  backdrop-filter: blur(2px);
+
   h2 {
     padding-bottom: 3rem;
     font-family: abril;
