--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,21 @@
 @import "./global";
 @import "./home";
 @import "./nav";
+@media screen and (max-width: 1000px) {
+  html {
+    font-size: 53%;
+  }
+}
+@media screen and (max-width: 700px) {
+  html {
+    font-size: 43%;
+  }
+  .search-wrapper {
+    min-height: 40vh;
+    display: flex;
+    align-items: center;
+  }
+  .search-container {
+    width: 90%;
+  }
+}
