--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -76,11 +76,11 @@
   transition: all 0.4s ease;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
   border-radius: 2rem;
-  &:hover .movie-info {
-    cursor: pointer;
-    backdrop-filter: blur(0.5rem);
-    opacity: 1;
-  }
+  // &:hover .movie-info {
+  //   cursor: pointer;
+  //   backdrop-filter: blur(0.5rem);
+  //   opacity: 1;
+  // }
 }
 .movie-poster {
   overflow: hidden;
@@ -96,10 +96,10 @@
     width: 100%;
     height: 100%;
   }
-  &:hover img {
-    cursor: pointer;
-    scale: 1.2;
-  }
+  // &:hover img {
+  //   cursor: pointer;
+  //   scale: 1.2;
+  // }
 }
 .movie-info {
   border-radius: 2rem;
