--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -56,7 +56,7 @@
 .animation-movies-container,
 .horror-movies-container,
 .mystery-movies-container {
-  overflow-x: hidden;
+  overflow: hidden;
   padding: 2rem 5%;
   h2 {
     padding-bottom: 3rem;
@@ -72,50 +72,35 @@
 }
 
 .movie-card {
-  position: relative;
-  transition: all 0.4s ease;
+  min-width: 30rem;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  flex-direction: column;
+  height: 55rem;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
   border-radius: 2rem;
-  // &:hover .movie-info {
-  //   cursor: pointer;
-  //   backdrop-filter: blur(0.5rem);
-  //   opacity: 1;
-  // }
+  cursor: pointer;
 }
 .movie-poster {
   overflow: hidden;
-  height: 100%;
-  min-width: 30rem;
-  cursor: pointer;
   border-radius: 2rem;
 
   img {
     transition: all 0.5s ease;
     pointer-events: none;
-    cursor: grab;
-    width: 100%;
     height: 100%;
+    width: 100%;
+    object-fit: cover;
   }
-  // &:hover img {
-  //   cursor: pointer;
-  //   scale: 1.2;
-  // }
 }
 .movie-info {
-  border-radius: 2rem;
-  background: rgba(0, 0, 0, 0.6);
   color: whitesmoke;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  padding: 2rem 1rem;
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.5s ease;
-  h5 {
-    padding: 2rem 0;
+  padding: 1rem;
+  min-height: 13rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  h4 {
     font-weight: 400;
   }
 }
