--- a/src/styles/_movieDetail.scss
+++ b/src/styles/_movieDetail.scss
@@ -7,7 +7,21 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  gap: 2rem;
   position: relative;
+}
+.detail-head {
+  span {
+    font-weight: 400;
+  }
+  h5 {
+    margin: 1rem 0;
+  }
+}
+.detail-text {
+  h3 {
+    margin-bottom: 2rem;
+  }
 }
 .bg-img {
   background: rgb(27, 27, 27);
