added detail image

--- a/src/styles/_mediaQuery.scss
+++ b/src/styles/_mediaQuery.scss
@@ -9,9 +9,12 @@
   .search-container {
     width: 90%;
   }
+  .movie-detail-wrapper {
+    flex-direction: column;
+  }
 }
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 750px) {
   html {
     font-size: 43%;
   }
