--- a/src/styles/_movieDetail.scss
+++ b/src/styles/_movieDetail.scss
@@ -1,13 +1,13 @@
 .movie-detail-wrapper {
   min-height: 90vh;
   min-height: 90svh;
-  padding: 2rem 5%;
+  padding: 5rem 5%;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6));
   color: whitesmoke;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
+  gap: 4rem;
   position: relative;
 }
 .detail-movie-poster {
@@ -21,7 +21,6 @@
 }
 .movie-details {
   flex: 2 1 40rem;
-
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -36,6 +35,7 @@
   }
 }
 .detail-text {
+  margin-top: 2rem;
   h3 {
     margin-bottom: 2rem;
   }
